<resources>
    <string name="app_name">摩恩e厨卫</string>
    <string name="error_network">网络连接失败</string>
    <string name="home_gv_one">客户注册</string>
    <string name="home_gv_two">卖货</string>
    <string name="home_gv_three">门店促销</string>
    <string name="home_gv_five">意向管理</string>
    <string name="home_gv_six">套餐管理</string>
    <string name="login_input_phone">请输入手机号码</string>
    <string name="login_input_pwd">请输入密码</string>
    <string name="login_input_code">请输入验证码</string>
    <string name="login_text">登 录</string>
    <string name="login_by_pwd">使用账户密码登录</string>
    <string name="login_by_code">使用手机验证码登录</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="confrim_text">确定</string>
    <string name="login_new_pwd">请输入新密码</string>
    <string name="login_pwd_again">请重复新密码</string>
    <string name="phone_number">手机号码</string>
    <string name="add_new_address">新增地址</string>
    <string name="store_customer_number">门店拓展客户（人数）</string>
    <string name="order_number">订单编号：</string>
    <string name="disbursements">实付款：</string>
    <string name="disbursements_1">实退金额：</string>
    <string name="phone_not_null">手机号码不能为空</string>
    <string name="code_not_null">验证码不能为空</string>
    <string name="order_time">下单时间</string>
    <string name="again">重置</string>
    <string name="confirm">确定</string>
    <string name="professional_customer">专业客户（人数）</string>
    <string name="name">姓名</string>
    <string name="degree">身份</string>
    <string name="cancel">取消</string>
    <string name="choose_degree">选择身份</string>
    <string name="pwd_not_null">密码不能为空</string>
    <string name="not_click">未标记</string>
    <string name="select_manager">选择员工</string>
    <string name="goods_guide">导购</string>
    <string name="goods_manager">店长</string>
    <string name="xiugai_note">修改备注</string>
    <string name="add_note">添加备注</string>

    <string name="register_success">注册成功</string>
    <string name="attention_customer">意向客户</string>
    <string name="attention_intent_user">意向管理</string>
    <string name="label_money">¥</string>
    <string name="label_X">X</string>
    <string name="load_list_erron">暂无更多的数据</string>
    <string name="please_write_sku">请输入商品SKU</string>
    <string name="capture_camera_failed">Camera disabled</string>
    <string name="capture_decode_failed">No QRCode found</string>
    <string name="msg_camera_framework_bug">相机被占用或没有相机权限，请检查</string>
    <string name="button_ok">退出</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <string name="seller_table">卖货柜台</string>

    <string name="content_str">是否前往应用详情页面开启:</string>
    <string name="content_str_camera">\n\n使用摄像头权限</string>
    <string name="content_str_read">\n\n读写文件权限</string>
    <string name="content_str_tele_phone">\n\n通话权限</string>
    <string name="hint_msg">\n\n通知权限</string>
    <string name="gps_might">\n\n定位权限</string>
    <string name="public_hint">提示</string>
    <string name="null_sd">没有SD卡</string>


    <string name="return_counter">退货柜台</string>
    <string name="get_goods_state">提货状态</string>
    <string name="return_goods_type">退款方式</string>
    <string name="return_reason">退货理由</string>
    <string name="please_choose">请选择</string>
    <string name="please_choose_get_type">请选择提货方式</string>
    <string name="please_choose_return_type">请选择退款方式</string>
    <string name="please_choose_return_reason">请选择退货原因</string>
    <string name="please_write_really_money">请填写实退金额</string>
    <string name="bank_card">银行卡</string>
    <string name="we_chat">微信</string>
    <string name="alipay">支付宝</string>
    <string name="cash">现金</string>
    <string name="market_get">商场收款</string>
    <string name="other">其他</string>
    <string name="yuan_lu">原路返回</string>
    <string name="all_lift">全部已提</string>
    <string name="limit_lift">部分已提</string>
    <string name="no_lift">未提</string>
    <string name="quality_problem">质量问题</string>
    <string name="brand_problem">品牌问题</string>
    <string name="price_problem">价格问题</string>
    <string name="return_failure">退货失败</string>
    <string name="return_success">退货完成</string>
    <string name="return_finish">退货完成!</string>
    <string name="return_goods_detail">退货单详情</string>
    <string name="order_finish">订单完成</string>
    <string name="order_finished">订单完成!</string>
    <string name="order_detail">订单详情</string>
    <string name="have_award">有赠送礼品</string>
    <string name="no_award">未赠送礼品</string>
    <string name="have_no">无</string>
    <string name="goods_list">商品列表</string>
    <string name="goods_sale_number">商品销售数量</string>
    <string name="goods_type_ranking">商品品类排名</string>
    <string name="sale_number">销售数量</string>
    <string name="meal_ranking">套餐排名</string>
    <string name="goods_sale_money">商品销售金额</string>
    <string name="sale_money">销售金额</string>
    <string name="store_sale">门店销量</string>
    <string name="today_type_ranking">今日商品品类销量排名</string>
    <string name="today_meal_ranking">今日套餐销量排名</string>
    <string name="today_register_number">今日客户注册数</string>
    <string name="today_single_sale_ranking">今日单品销量排名</string>
    <string name="today_store_sale_money">今日门店销售额</string>
    <string name="choose_order">选择订单</string>
    <string name="choose_goods">选择商品</string>
    <string name="please_choose_goods_number">请选择商品数量</string>
    <string name="return_goods_list">退货单列表</string>
    <string name="please_write_return_number">请输入退货单编号</string>
    <string name="add_professional_customer">添加专业客户</string>
    <string name="gong_zhang">工长</string>
    <string name="desinger">设计师</string>
    <string name="choose_rule">选择身份</string>
    <string name="no_phone">手机号未填写</string>
    <string name="no_name">姓名未填写</string>
    <string name="please_choose_rule">请选择身份</string>
    <string name="have_no_rule">未选择身份</string>
    <string name="add_staff_account">添加导购账号</string>
    <string name="check_result">巡店结果</string>
    <string name="coupon_use_record">优惠券使用记录</string>
    <string name="goods_type">品类:</string>
    <string name="series">系列:</string>
    <string name="spec">规格:</string>
    <string name="marketing_unit">销售单位:</string>
    <string name="price_of_moen">摩恩PR00售价:</string>
    <string name="goods_detail">商品详情</string>
    <string name="order_list">订单列表</string>
    <string name="please_write_order_number">请输入订单编号</string>
    <string name="store_manger">门店管理</string>
    <string name="profess_customer">专业客户</string>
    <string name="sample_out_detail">出样详情</string>
    <string name="sample_out_information">出样信息</string>
    <string name="edit">编辑</string>
    <string name="try_water_information">试水台信息</string>
    <string name="sample_out_commit">出样发布</string>
    <string name="store_customer">门店客户</string>
    <string name="not_good_reason">不合格原因</string>
    <string name="pic_not_finish_yas">图片没有压缩完成</string>
    <string name="code_is">验证码:</string>
    <string name="commit_success">提交成功</string>
    <string name="customer_recognition">客户识别</string>
    <string name="please_not_commit_more">请勿重复添加</string>
    <string name="stop_success">停用成功</string>
    <string name="commit_failure">提交失败</string>
    <string name="order_name">订单编号:</string>
    <string name="store_return">门店退货单</string>
    <string name="customer_return">客户退货单</string>
    <string name="change_psd_success">密码修改成功</string>
    <string name="please_write_reason">请输入退货原因</string>
    <string name="people_manger">员工管理</string>

    <string name="get_type">提货方式</string>
    <string name="send_type">配送方式</string>
    <string name="get_money_type">收款方式</string>

    <string name="write_customer_phone">请输入客户手机号码</string>
    <string name="write_sku_meal">请输入商品SKU/套餐号</string>
    <string name="return_goods_code">退货单编号:</string>
    <string name="already_get">已提</string>

</resources>
