<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:src="@mipmap/group_1_1"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:paddingTop="80dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/edt_phone"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@null"
            android:drawableLeft="@mipmap/group_1_2"
            android:drawablePadding="@dimen/space_10"
            android:hint="请输入原密码"
            android:textColor="@color/color_air_blue"
            android:textSize="@dimen/text_size_13"
            android:inputType="textPassword"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyz"
            />
        <View
            android:layout_marginTop="@dimen/space_3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_divider_2"
            android:background="@color/color_air_blue"/>

        <LinearLayout
            android:layout_marginTop="@dimen/space_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <EditText
                android:id="@+id/edt_password"
                android:inputType="textPassword"
                android:digits="0123456789abcdefghigklmnopqrstuvwxyz"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@null"
                android:drawableLeft="@mipmap/group_1_3"
                android:drawablePadding="@dimen/space_10"
                android:hint="@string/login_new_pwd"
                android:textColor="@color/color_air_blue"
                android:textSize="@dimen/text_size_13"
                />
            <View
                android:layout_marginTop="@dimen/space_3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_divider_2"
                android:background="@color/color_air_blue"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_show_pwd"
            android:layout_marginTop="@dimen/space_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <EditText
                android:id="@+id/edt_again_password"
                android:inputType="textPassword"
                android:digits="0123456789abcdefghigklmnopqrstuvwxyz"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@null"
                android:drawableLeft="@mipmap/group_1_3"
                android:drawablePadding="@dimen/space_10"
                android:hint="@string/login_pwd_again"
                android:textColor="@color/color_air_blue"
                android:textSize="@dimen/text_size_13"
                />
            <View
                android:layout_marginTop="@dimen/space_3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_divider_2"
                android:background="@color/color_air_blue"/>

        </LinearLayout>


        <TextView
            android:id="@+id/tv_confrim"
            android:textSize="@dimen/text_size_15"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/confrim_text"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/reclick_btn_bg"
            />

    </LinearLayout>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/group_2_3"
        android:padding="@dimen/space_15"
        android:id="@+id/iv_back"
        android:visibility="visible"
        />

</RelativeLayout>